--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,9 @@ anyhow = "1.0.97"
 bytemuck = { version = "1.22.0", features = ["derive"] }
 cgmath = "0.18.0"
 env_logger = "0.11.8"
-glyphon = "0.9.0"
 log = "0.4.27"
-palette = "0.7.6"
+peniko = "0.3.1"
 pollster = "0.4.0"
-wgpu = "25.0.0"
+vello = "0.4.1"
+wgpu = "23.0.1"
 winit = "0.30.9"
