--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ bytemuck = { version = "1.23.0", features = ["derive"] }
 cgmath = "0.18.0"
 env_logger = "0.11.8"
 log = "0.4.27"
+parley = "0.4.0"
 pollster = "0.4.0"
 vello = "0.5.0"
 wgpu = "24.0.0"
